<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        	  xmlns:tools="http://schemas.android.com/tools"
    		  android:id="@+id/MainLayout"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:orientation="vertical" 
              android:background="#AA000000" >
              
        <TextView
        android:id="@+id/textViewStart"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startmenu_initial"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:background="#AA000000" />
                      	
	<LinearLayout 
	    android:id="@+id/AcceptDeclineLayout"
	    android:layout_alignParentBottom="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="horizontal"
	    android:paddingTop="2dip">
	    
		<Button 
	        android:id="@+id/AcceptButton"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:typeface="serif"
	        android:textColor="#ffffffff"
	        android:text="@string/bottom_accept"
	        />
	    
		<Button 
	        android:id="@+id/DeclineButton"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:typeface="serif"
	        android:textColor="#ffffffff"
	        android:text="@string/bottom_decline"
	        /> 
	</LinearLayout>
	
	<android.support.v4.view.ViewPager android:id="@+id/pager"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_above="@id/AcceptDeclineLayout"
    	android:layout_alignWithParentIfMissing="true"
    	tools:context=".MainActivity" /> 		
       
</RelativeLayout>

<!-- 
<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" />
-->